...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.thebakingapp.StepDetailActivity">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/player_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.exoplayer2.ui.SimpleExoPlayerView>

    <android.support.v7.widget.CardView
...
