...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textColor="#000000"
                    android:text="@string/steps"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/steps_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>
        </android.support.v7.widget.CardView>
...
